<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shop Finder!</string>
    <string name="fullname">Fullname</string>
    <string name="button_send">Send</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signup">Sign Up</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="button_viewcart">View Cart</string>
    <string name="button_searchproducts">Search Products</string>
    <string name="button_addtocart">Add to Cart</string>
    <string name="description">Description:</string>
    <string name="productid">Product ID:</string>
    <string name="product">Product:</string>
    <string name="from">Bought from:</string>
    <string name="rating">Your Rating:</string>
    <string name="review_text">Your Review:</string>
    <string name="real_price">Final Price:</string>
    <string name="submit">Submit</string>
    <string name="spin">-</string>
    <string name="KM">by Km</string>
    <string name="minutes">by minutes</string>
    <string name="user_email">user_email</string>
    <string name="user_password">user_password</string>
    <string name="distance">distance</string>
    <string name="mode">mode</string>
    <string name="applysettings">Apply</string>
    <string name="button_settings">Settings</string>
    <string name="settings_radiogroup">Measure distance:</string>
    <string name="rememberme">Remember me?</string>
    <string name="preference_file_key">preference_file</string>
    <string name="productprice">Best Price:</string>
</resources>
