<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/grey">

    <TextView
        android:id="@+id/textView1"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/settings_radiogroup"/>
    
    <RadioGroup
        android:id="@+id/radioSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left">

        <RadioButton
            android:id="@+id/radioKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/KM"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes" />

    </RadioGroup>
    
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    android:layout_marginTop="50dp"/>

    <Button 
android:id="@+id/btnSearch"  
android:layout_weight="0"  
android:textSize="35sp"
android:fontFamily="sans-serif-medium"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="30dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/applysettings"
android:textColor="@color/white"
android:background="@drawable/nicebutton"
 android:onClick="apply"
/>

</LinearLayout>