<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >
<ImageView
        android:id="@+id/product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"/>
 <TextView
        android:id="@+id/product_name"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:textSize="50sp"
        android:fontFamily="Arial"        
        android:text="@string/email"/>
 <TextView
        android:id="@+id/product_desc"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:textSize="20sp"
        android:fontFamily="Arial"        
        android:text="@string/password"/>
<Button 
android:id="@+id/signup_btn"  
android:layout_weight="0"  
android:textSize="35sp"
android:fontFamily="Arial"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="20px"
android:layout_marginLeft="20px"
android:layout_marginRight="20px"
android:text="@string/button_addtocart"
android:background="@android:color/holo_green_light"
android:onClick="addToCart"/>
</LinearLayout>

