<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    >

 <TextView
        android:id="@+id/textView1"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/email"/>
 <EditText android:id="@+id/email"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="Arial"        
        android:inputType="textEmailAddress" />
 <TextView
        android:id="@+id/textView2"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/password"/>
 <EditText android:id="@+id/password"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="Arial"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"/>
<Button 
android:id="@+id/signin_btn"  
android:layout_weight="0"  
android:textSize="35sp"
android:fontFamily="sans-serif-medium"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="50dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/button_signin"
android:textColor="@color/white"
android:background="@drawable/nicebutton"
android:onClick="signIn"/>
<Button 
android:id="@+id/signup_btn"  
android:layout_weight="0"  
android:textSize="35sp"
android:fontFamily="sans-serif-medium"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="20dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/button_signup"
android:textColor="@color/white"
android:background="@drawable/nicebutton"
android:onClick="signUp"/>
</LinearLayout>

