<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/grey">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
   android:layout_marginTop="30dp"
   android:weightSum="1" >
         <TextView
        android:id="@+id/product_text"
        android:layout_weight="0.2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="50px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="0px"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/product"/>
        <TextView
        android:id="@+id/review_product"
        android:layout_weight="0.8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="-180dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/settings_radiogroup"/>
        </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="-35dp"
    android:weightSum="1" >
         <TextView
        android:id="@+id/store_text"
        android:layout_weight="0.2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="0px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="0px"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/from"/>
        <TextView
        android:id="@+id/review_store"
        android:layout_weight="0.8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="-120dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/settings_radiogroup"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="1" >
         <TextView
        android:id="@+id/rating_text"
        android:layout_weight="0.2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="0px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="0px"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/rating"/>
        <Spinner
        android:id="@+id/spinner"
        android:layout_weight="0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="-220dp"
        android:layout_marginTop="0dp"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="1" >
            <TextView
        android:id="@+id/price_text"
        android:layout_weight="0.2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="0px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="0px"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/real_price"/>
             <EditText android:id="@+id/real_price"
        android:layout_weight="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="-220dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="Arial"        
        android:inputType="number" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:weightSum="1" >
        <TextView
        android:id="@+id/review_text"
        android:layout_weight="0.2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="0px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="0px"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"        
        android:text="@string/review_text"/>
        <EditText android:id="@+id/review_input"
        android:layout_weight="0.8"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="-300dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="Arial"        
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="2000"
        android:maxLines="4"/>
        </LinearLayout>
            <Button 
android:id="@+id/btnSubmit"  
android:layout_weight="0"  
android:textSize="35sp"
android:fontFamily="sans-serif-medium"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:gravity="center_horizontal"
android:layout_marginTop="30dp"
android:layout_marginLeft="20dp"
android:layout_marginRight="20dp"
android:text="@string/submit"
android:textColor="@color/white"
android:background="@drawable/nicebutton"
 android:onClick="submit"
/>
</LinearLayout>